Nomes s'hauria de cambiar el header i el footer per els finals

--- a/Registre/registre.html
+++ b/Registre/registre.html
@@ -22,17 +22,14 @@
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
-  <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
-  <link href="assets/css/style_regist.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">.
   
 	<!-- MATERIAL DESIGN ICONIC FONT -->
   <link rel="stylesheet" href="fonts/material-design-iconic-font/css/material-design-iconic-font.min.css">
 
   <!-- STYLE CSS -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.scss">
 
   <!-- =======================================================
   * Template Name: Srenity - v4.3.0
@@ -49,7 +46,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1 class="text-light"><a href="index.html">Serenity</a></h1>
+        <h1 class="text-light"><a href="index.html"></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -113,7 +110,7 @@
 					<img src="images/registration-form-1.jpg" alt="">
 				</div>
 				<form action="">
-					<h3>únete a nosotros y apoya la causa</h3>
+					<h3>ÚNETE A NOSOTROS Y APOYA LA CAUSA</h3>
 					<div class="form-group">
 						<input type="text" placeholder="Nombre" class="form-control">
 						<input type="text" placeholder="Apellidos" class="form-control">
@@ -147,7 +144,7 @@
 						<button>Registra-te
 							<i class="zmdi zmdi-arrow-right"></i>
 						</button>
-						<button>Ya tienes cuenta?
+						<button>Ya tienes cuenta? 
 							<i class="zmdi zmdi-arrow-right"></i>
 						</button>
 					</div>
