--- a/pricing.html
+++ b/pricing.html
@@ -100,42 +100,40 @@
               <h3>Salva 1 pingüino</h3>
               <h4><sup>€</sup>15<span> / mes</span></h4>
               <ul>
-                <li>Alimentamos</li>
-                <li>Damos hogar</li>
-                <li>Rescatamos</li>
+                <li>Ponle nombre</li>
+                <li>Le alimentaremos</li>
+                <li>Certificado de adopción digital</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Adopta ya!</a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
             <div class="box featured" data-aos="fade-up" data-aos-delay="100">
-              <h3>Business</h3>
+              <h3>Salva 2 pingüinos</h3>
               <h4><sup>€</sup>25<span> / mes</span></h4>
               <ul>
                 <li>Todo lo del plan anterior</li>
+                <li>Certificado de adopción fisico</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Adopta ya!</a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
             <div class="box" data-aos="fade-up" data-aos-delay="200">
-              <h3>Developer</h3>
-              <h4><sup>$</sup>29<span> / month</span></h4>
+              <h3>Salva 3 pingüinos</h3>
+              <h4><sup>€</sup>35<span> / mes</span></h4>
               <ul>
-                <li>Aida dere</li>
-                <li>Nec feugiat nisl</li>
-                <li>Nulla at volutpat dola</li>
-                <li>Pharetra massa</li>
-                <li>Massa ultricies mi</li>
+                <li>Todo lo del plan anterior</li>
+                <li>Camiseta SphenAuk</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Adopta ya!</a>
               </div>
             </div>
           </div>
@@ -153,7 +151,7 @@
                 <li>Massa ultricies mi</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Buy Now</a>
+                <a href="#" class="btn-buy">Adopta ya!</a>
               </div>
             </div>
           </div>
