--- a/about.html
+++ b/about.html
@@ -38,12 +38,11 @@
 </head>
 
 <body>
-<!-- ======= Header ======= -->
+  <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-
         <!--<h1 class="text-light"><a href="index.html">SphenAuk</a></h1>-->
         <!-- Uncomment below if you prefer to use an image logo -->
         <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
@@ -51,21 +50,18 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-
-          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li class="dropdown"><a href="#"><span>Sobre Nosotros</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="about.html">¿Que hacemos?</a></li>
+              <li><a class="active" href="about.html">¿Que hacemos?</a></li>
               <li><a href="team.html">¿Quienes trabajamos?</a></li>
             </ul>
           </li>
-          <li><a href="services.html">Noticias</a></li>
           <li><a href="pricing.html">Adopta a un pingüino</a></li>
-          <li><a href="portfolio.html">Tienda</a></li>
+          <li><a href="Merchandaisin (index)/index.html">Tienda</a></li>
           <li><a href="contact.html">Contacto</a></li>
 
-          <li><a class="getstarted" href="about.html">Hazte socio</a></li>
-
+          <li><a class="getstarted" href="registre.html">Hazte socio</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
