--- a/contact.html
+++ b/contact.html
@@ -56,12 +56,11 @@
               <li><a href="team.html">¿Quienes trabajamos?</a></li>
             </ul>
           </li>
-          <li><a href="services.html">Noticias</a></li>
           <li><a href="pricing.html">Adopta a un pingüino</a></li>
-          <li><a href="portfolio.html">Tienda</a></li>
+          <li><a href="Merchandaisin (index)/index.html">Tienda</a></li>
           <li><a class="active" href="contact.html">Contacto</a></li>
 
-          <li><a class="getstarted" href="about.html">Hazte socio</a></li>
+          <li><a class="getstarted" href="registre.html">Hazte socio</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
