--- a/index.html
+++ b/index.html
@@ -130,52 +130,52 @@
       <div class="container">
 
         <div class="section-title pt-5" data-aos="fade-up">
-          <h2>Our Services</h2>
+          <h2>¿Que hacemos?</h2>
         </div>
 
         <div class="row">
           <div class="col-md-6">
             <div class="icon-box" data-aos="fade-up">
               <div class="icon"><i class="bi bi-briefcase" style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4 class="title"><a href="">Gestionamos todo el papeleo</a></h4>
+              <p class="description">No tienes que preocuparte de nada, simplemente contribuye con una donación y nosotros nos ocupamos de todo el aburrido papeleo que conlleva adoptar un pingüino</p>
             </div>
           </div>
           <div class="col-md-6">
             <div class="icon-box" data-aos="fade-up">
               <div class="icon"><i class="bi bi-book" style="color: #e9bf06;"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <h4 class="title"><a href="">Formación</a></h4>
+              <p class="description">Formamos a los cuidadores, contribuyentes y todo tipo de trabajadores de nuestra ONG</p>
             </div>
           </div>
 
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-card-checklist" style="color: #3fcdc7;"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <h4 class="title"><a href="">Documentamos todo</a></h4>
+              <p class="description">Te entregamos todo tipo de certificados para oficializar cualquier tipo de adopción</p>
             </div>
           </div>
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-binoculars" style="color:#41cf2e;"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <h4 class="title"><a href="">Investigación</a></h4>
+              <p class="description">Estamos constantemente en desarrollo y intentando encontrar soluciones para la correcta preservación de los pingüinos</p>
             </div>
           </div>
 
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-globe" style="color: #d6ff22;"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <h4 class="title"><a href="">Alrededor del mundo</a></h4>
+              <p class="description">Tenemos sedes en todo el mundo para facilitar el hecho de que todo el mundo pueda contribuir a esta noble causa</p>
             </div>
           </div>
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-clock" style="color: #4680ff;"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <h4 class="title"><a href="">Trabajamos contrareloj</a></h4>
+              <p class="description">Conseguimos un crecimiento exponencial en la población de pingüinos en los ultimos años para contrarestar otros factores que ayudan a la extincion de los pingüinos</p>
             </div>
           </div>
         </div>
