--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="hero-container" data-aos="fade-up">
       <h1>SphenAuk</h1>
       <h2>Unamonos para combatir la extinción de los pinüinos</h2>
-      <a href="#about" class="btn-get-started scrollto">Hazte socio</a>
+      <a href="registre.html" class="btn-get-started scrollto">Hazte socio</a>
     </div>
   </section><!-- End Hero -->
 
