--- a/Merchandaisin (index)/index.html
+++ b/Merchandaisin (index)/index.html
@@ -45,7 +45,7 @@ https://templatemo.com/tm-546-sixteen-clothing
       <nav class="navbar navbar-expand-lg"> 
         <style color > </style>
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>Merchardaising <em>SpenAuk</em></h2></a>
+          <a class="navbar-brand" href="index.html"><h2>Merchardaising <em>SphenAuk</em></h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
