--- a/team.html
+++ b/team.html
@@ -79,24 +79,18 @@
 
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
-      <div class="icono">
-       <p class="bg-info text-white">Apadrina a un pingüino <i class="fas fa-feather-alt"></i></p>
-      </div>
-      <div class="bg-info text-white">
+      <div class="breadcrumb-hero">
         <div class="container">
-          <div class="bg-info text-white">
-            <h2>NOSOTROS</h2>
-            <div class="mover">
-            <p>Nuestro compromiso con distintas causas nos lleva a activar diferentes campañas de concienciación social para dar visibilidad a problemas que creemos que necesitan una solución urgente. De esta manera conseguimos llegar a muchas más personas y utilizando todos los canales a nuestro alcance para comunicar los beneficios del vínculo entre las personas y los animales (En este caso los pingüinos).  </p>
+          <div class="breadcrumb-hero">
+            <h2>Nosotros</h2>
+            <p>Nuestro compromiso con distintas causas nos lleva a activar diferentes campañas de concienciación social para dar visibilidad a problemas que creemos que necesitan una solución urgente. De esta manera conseguimos llegar a muchas más personas y utilizando todos los canales a nuestro alcance para comunicar los beneficios del vínculo entre las personas y los animales (En este caso los pingüinos).</p>
           </div>
-          </div>
-          
         </div>
       </div>
       <div class="container">
         <ol>
-          <li><a href="index.html">Inicio</a></li>
-          <li>Nuestro equipo</li>
+          <li><a href="index.html">Home</a></li>
+          <li>Nosotros</li>
         </ol>
       </div>
     </section><!-- End Breadcrumbs -->
