--- a/Merchandaisin (index)/index.html
+++ b/Merchandaisin (index)/index.html
@@ -56,11 +56,11 @@ https://templatemo.com/tm-546-sixteen-clothing
             <li class="dropdown"><a href="#"><span>Sobre Nosotros</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
                 <li><a href="../about.html">¿Que hacemos?</a></li>
-                <li><a class="active" href="../team.html">¿Quienes trabajamos?</a></li>
+                <li><a href="../team.html">¿Quienes trabajamos?</a></li>
               </ul>
             </li>
             <li><a href="../pricing.html">Adopta a un pingüino</a></li>
-            <li><a href="Merchandaisin (index)/index.html">Tienda</a></li>
+            <li><a class="active" href="Merchandaisin (index)/index.html">Tienda</a></li>
             <li><a href="../contact.html">Contacto</a></li>
   
             <li><a class="getstarted" href="registre.html">Hazte socio</a></li>
