--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -29,7 +30,6 @@
     <link href="assets/css/style.css" rel="stylesheet">
 
     <!-- =======================================================
->>>>>>> Stashed changes
   * Template Name: Serenity - v4.3.0
   * Template URL: https://bootstrapmade.com/serenity-bootstrap-corporate-template/
   * Author: BootstrapMade.com
@@ -38,7 +38,8 @@
 </head>
 
 <body>
-  <!-- ======= Header ======= -->
+
+   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
@@ -50,18 +51,19 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
           <li class="dropdown"><a href="#"><span>Sobre Nosotros</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a class="active" href="about.html">¿Que hacemos?</a></li>
+              <li><a href="about.html">¿Que hacemos?</a></li>
               <li><a href="team.html">¿Quienes trabajamos?</a></li>
             </ul>
           </li>
+          <li><a href="services.html">Noticias</a></li>
           <li><a href="pricing.html">Adopta a un pingüino</a></li>
-          <li><a href="Merchandaisin (index)/index.html">Tienda</a></li>
+          <li><a href="portfolio.html">Tienda</a></li>
           <li><a href="contact.html">Contacto</a></li>
 
-          <li><a class="getstarted" href="registre.html">Hazte socio</a></li>
+          <li><a class="getstarted" href="about.html">Hazte socio</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -135,7 +137,7 @@
                 <div class="row">
 
                     <div class="col-lg-6 video-box align-self-baseline position-relative">
-                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\about2.jpg"
+                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\pingüs1.jpg"
                             class="img-fluid" alt="">
                         <a href="https://www.youtube.com/watch?v=YjHeDz_jVSU&list=LL&index=1&t=21s"
                             class="glightbox play-btn mb-4"></a>
@@ -201,7 +203,7 @@
 
                 <div class="row content">
                     <div class="col-md-5" data-aos="fade-right">
-                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\work-process-12.png"
+                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\work-process-1.png"
                             class="img-fluid" alt="">
                     </div>
                     <div class="col-md-7 pt-4" data-aos="fade-left">
@@ -230,7 +232,7 @@
 
                 <div class="row content">
                     <div class="col-md-5 order-1 order-md-2" data-aos="fade-left">
-                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\work-process-22.png"
+                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\work-process-2.png"
                             class="img-fluid" alt="">
                     </div>
                     <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
@@ -250,7 +252,7 @@
 
                 <div class="row content">
                     <div class="col-md-5" data-aos="fade-right">
-                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\work-process-32.png"
+                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\work-process-3.png"
                             class="img-fluid" alt="">
                     </div>
                     <div class="col-md-7 pt-5" data-aos="fade-left">
@@ -284,7 +286,7 @@
 
                 <div class="row content">
                     <div class="col-md-5 order-1 order-md-2" data-aos="fade-left">
-                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\work-process-42.png"
+                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\work-process-4.png"
                             class="img-fluid" alt="">
                     </div>
                     <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
@@ -324,35 +326,35 @@
                 <div class="clients-slider swiper-container">
                     <div class="swiper-wrapper align-items-center">
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\client-12.png"
+                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\clients\client-1.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\client-22.png"
+                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\clients\client-2.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\client-32.png"
+                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\clients\client-3.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\client-42.png"
+                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\clients\client-4.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\client-52.png"
+                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\clients\client-5.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\client-62.png"
+                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\clients\client-6.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\client-72.png"
+                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\clients\client-7.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\TRABAJO FINAL\SOBRENOSOTROS\Treballfinalimg\client-82.png"
+                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\clients\client-8.png"
                                 class="img-fluid" alt="">
                         </div>
                     </div>
