--- a/Merchandaisin (index)/index.html
+++ b/Merchandaisin (index)/index.html
@@ -173,7 +173,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               <div class="down-content">
                 <a href="#"><h4>Peluche XXl</h4></a>
                 <h6>$22.50</h6>
-                <p>Peluche grande, 100% algodon confeccionado a mano.Ideal como regalo o para dormir.</p>
+                <p>Peluche mas grande, 100% algodon confeccionado a mano. Ideal para las codiciosas.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
