--- a/Merchandaisin (index)/index.html
+++ b/Merchandaisin (index)/index.html
@@ -63,7 +63,7 @@ https://templatemo.com/tm-546-sixteen-clothing
             <li><a class="active" href="Merchandaisin (index)/index.html">Tienda</a></li>
             <li><a href="../contact.html">Contacto</a></li>
   
-            <li><a class="getstarted" href="registre.html">Hazte socio</a></li>
+            <li><a class="getstarted" href="../registre.html">Hazte socio</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
