--- a/team.html
+++ b/team.html
@@ -65,6 +65,8 @@
           </li>
           <li><a href="pricing.html">Adopta a un pingüino</a></li>
           <li><a href="Merchandaisin (index)/index.html">Tienda</a></li>
+          <li><a href="./pagos estadisticas (profile-dashboard)/dashboard.html">Estadisticas</a></li>
+          <li><a href="blog.html">Noticias</a></li>
           <li><a href="contact.html">Contacto</a></li>
 
           <li><a class="getstarted" href="registre.html">Hazte socio</a></li>
