--- a/Merchandaisin (index)/index.html
+++ b/Merchandaisin (index)/index.html
@@ -61,8 +61,8 @@ https://templatemo.com/tm-546-sixteen-clothing
             </li>
             <li><a href="../pricing.html">Adopta a un pingüino</a></li>
             <li><a class="active" href="Merchandaisin (index)/index.html">Tienda</a></li>
-            <li><a href="./pagos estadisticas (profile-dashboard)/dashboard.html">Estadisticas</a></li>
-            <li><a href="blog.html">Noticias</a></li>
+            <li><a href="../pagos estadisticas (profile-dashboard)/dashboard.html">Estadisticas</a></li>
+            <li><a href="../blog.html">Noticias</a></li>
             <li><a href="../contact.html">Contacto</a></li>
   
             <li><a class="getstarted" href="../registre.html">Hazte socio</a></li>
