--- a/Merchandaisin (index)/index.html
+++ b/Merchandaisin (index)/index.html
@@ -40,35 +40,38 @@ https://templatemo.com/tm-546-sixteen-clothing
     </div>  
     <!-- ***** Preloader End ***** -->
 
-    <!-- Header -->
-    <header id="header" class="fixed-top d-flex align-items-center">
-      <div class="container d-flex align-items-center justify-content-between">
-  
-        <div class="logo">
-          <!--<h1 class="text-light"><a href="index.html">SphenAuk</a></h1>-->
-          <!-- Uncomment below if you prefer to use an image logo -->
-          <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
-        </div>
-  
-        <nav id="navbar" class="navbar">
-          <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li class="dropdown"><a href="#"><span>Sobre Nosotros</span> <i class="bi bi-chevron-down"></i></a>
-              <ul>
-                <li><a href="../about.html">¿Que hacemos?</a></li>
-                <li><a href="../team.html">¿Quienes trabajamos?</a></li>
-              </ul>
-            </li>
-            <li><a href="../pricing.html">Adopta a un pingüino</a></li>
-            <li><a class="active" href="Merchandaisin (index)/index.html">Tienda</a></li>
-            <li><a href="../pagos estadisticas (profile-dashboard)/dashboard.html">Estadisticas</a></li>
-            <li><a href="../blog.html">Noticias</a></li>
-            <li><a href="../contact.html">Contacto</a></li>
-  
-            <li><a class="getstarted" href="../registre.html">Hazte socio</a></li>
-          </ul>
-          <i class="bi bi-list mobile-nav-toggle"></i>
-        </nav><!-- .navbar -->
+      <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top d-flex align-items-center">
+    <div class="container d-flex align-items-center justify-content-between">
+
+      <div class="logo">
+        <!--<h1 class="text-light"><a href="index.html">SphenAuk</a></h1>-->
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+      </div>
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li class="dropdown"><a href="#"><span>Sobre Nosotros</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="../about.html">¿Que hacemos?</a></li>
+              <li><a href="../team.html">¿Quienes trabajamos?</a></li>
+            </ul>
+          </li>
+          <li><a href="../pricing.html">Adopta a un pingüino</a></li>
+          <li><a href="Merchandaisin (index)/index.html">Tienda</a></li>
+          <li><a href="../pagos estadisticas (profile-dashboard)/dashboard.html">Estadisticas</a></li>
+          <li><a href="../blog.html">Noticias</a></li>
+          <li><a href="../contact.html">Contacto</a></li>
+
+          <li><a class="getstarted" href="../registre.html">Hazte socio</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+
+    </div>
+  </header><!-- End Header -->
   
       </div>
     </header>
