--- a/blog.html
+++ b/blog.html
@@ -39,39 +39,35 @@
 
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
-      <div class="container d-flex align-items-center justify-content-between">
+    <div class="container d-flex align-items-center justify-content-between">
 
-          <div class="logo">
-              <h1 class="text-light"><a href="index.html">SphenAuk</a></h1>
-              <!-- Uncomment below if you prefer to use an image logo -->
-              <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-          </div>
-
-          <nav id="navbar" class="navbar">
-              <ul>
-                  <li><a href="index.html">Inicio</a></li>
-                  <li class="dropdown"><a href="#"><span>Sobre Nosotros</span> <svg xmlns="http://www.w3.org/2000/svg"
-                              width="16" height="16" fill="currentColor" class="bi bi-arrow-down-short"
-                              viewBox="0 0 16 16">
-                              <path fill-rule="evenodd"
-                                  d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z" />
-                          </svg></a>
-                      <ul>
-                          <li><a href="team.html">Equipo</a></li>
-                  </li>
-              </ul>
-              </li>
-              <li><a href="noticias.html">Noticias</a></li>
-              <li><a href="adoptaunpingu.html">Adopta un pingüino</a></li>
-              <li><a href="tienda.html">Tienda</a></li>
-              <li><a href="contacto.html">Contacto</a></li>
-
-              <li><a class="getstarted" href="about.html">Hazte socio</a></li>
-              </ul>
-              <i class="bi bi-list mobile-nav-toggle"></i>
-          </nav><!-- .navbar -->
-
+      <div class="logo">
+        <!--<h1 class="text-light"><a href="index.html">SphenAuk</a></h1>-->
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
       </div>
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li class="dropdown"><a href="#"><span>Sobre Nosotros</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="about.html">¿Que hacemos?</a></li>
+              <li><a href="team.html">¿Quienes trabajamos?</a></li>
+            </ul>
+          </li>
+          <li><a href="pricing.html">Adopta a un pingüino</a></li>
+          <li><a href="Merchandaisin (index)/index.html">Tienda</a></li>
+          <li><a href="./pagos estadisticas (profile-dashboard)/dashboard.html">Estadisticas</a></li>
+          <li><a class="active" href="blog.html">Noticias</a></li>
+          <li><a href="contact.html">Contacto</a></li>
+
+          <li><a class="getstarted" href="registre.html">Hazte socio</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+
+    </div>
   </header><!-- End Header -->
 
   <main id="main">
