--- a/about.html
+++ b/about.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>About - Serenity Bootstrap Template</title>
+    <title>Sobre Nosotros</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="C:\Users\Admin\Desktop\Ejemplo\TRABAJO FINAL\Treballfinalimg\SphenAuk.png" rel="icon">
-    <link href="C:\Users\Admin\Desktop\Ejemplo\TRABAJO FINAL\Treballfinalimg\SphenAuk.png" rel="apple-touch-icon">
+    <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link
@@ -51,8 +51,8 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="active" href="index.html">Home</a></li>
-          <li class="dropdown"><a href="#"><span>Sobre Nosotros</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a href="index.html">Home</a></li>
+          <li class="dropdown"><a class="active"     href="#"><span>Sobre Nosotros</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="about.html">¿Que hacemos?</a></li>
               <li><a href="team.html">¿Quienes trabajamos?</a></li>
@@ -63,7 +63,7 @@
           <li><a href="portfolio.html">Tienda</a></li>
           <li><a href="contact.html">Contacto</a></li>
 
-          <li><a class="getstarted" href="about.html">Hazte socio</a></li>
+          <li><a class="getstarted" href="registre.html">Hazte socio</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -318,7 +318,7 @@
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
-                    <h2>Nuestras emoresas compañeras</h2>
+                    <h2>Nuestras empresas compañeras</h2>
                     <p>Muchas empresas comparten nuestros ideales y deciden apoyarnos con el fin de conseguir
                         nuestro objetivo común.</p>
                 </div>
