--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 
 <body>
 
-   <!-- ======= Header ======= -->
+  <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center justify-content-between">
 
@@ -51,19 +51,20 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="active" href="index.html">Home</a></li>
-          <li class="dropdown"><a href="#"><span>Sobre Nosotros</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a href="index.html">Home</a></li>
+          <li class="dropdown"><a class="active" href="#"><span>Sobre Nosotros</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="about.html">¿Que hacemos?</a></li>
+              <li><a class="active" href="about.html">¿Que hacemos?</a></li>
               <li><a href="team.html">¿Quienes trabajamos?</a></li>
             </ul>
           </li>
-          <li><a href="services.html">Noticias</a></li>
           <li><a href="pricing.html">Adopta a un pingüino</a></li>
-          <li><a href="portfolio.html">Tienda</a></li>
+          <li><a href="Merchandaisin (index)/index.html">Tienda</a></li>
+          <li><a href="./pagos estadisticas (profile-dashboard)/dashboard.html">Estadisticas</a></li>
+          <li><a href="blog.html">Noticias</a></li>
           <li><a href="contact.html">Contacto</a></li>
 
-          <li><a class="getstarted" href="about.html">Hazte socio</a></li>
+          <li><a class="getstarted" href="registre.html">Hazte socio</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
