--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <section id="hero">
     <div class="hero-container" data-aos="fade-up">
       <h1>SphenAuk</h1>
-      <h2>Unamonos para combatir la extinción de los pinüinos</h2>
+      <h2>Unamonos para combatir la extinción de los pingüinos</h2>
       <a href="registre.html" class="btn-get-started scrollto">Hazte socio</a>
     </div>
   </section><!-- End Hero -->
