--- a/contact.html
+++ b/contact.html
@@ -111,7 +111,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>SphenAuk@SphenAuk.com</p>
+                <p>SphenAuk@gmail.com</p>
               </div>
 
               <div class="phone">
