--- a/team.html
+++ b/team.html
@@ -134,9 +134,9 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Bill Gates</h4>
-                <span>Millonario</span>
-                <p>William Henry Gates III (Seattle, Washington; 28 de octubre de 1955), mejor conocido como Bill Gates (AFI: [bil gejts]), es un empresario, informático y filántropo estadounidense, conocido por haber creado y fundado junto con Paul Allen, la empresa Microsoft. De igual forma es conocido por su pequeño fetiche con los pingüinos, ja que cree que son muy manipulables.</p>
+                <h4>Juan Manuel</h4>
+                <span>Mecanico</span>
+                <p> Estuvo trabajando como mecanico 7 años hasta que se dio cuenta de que eso no lo llenaba como persona asi que decidio emprender un el camino de la beneficiencia. un <bm>ideal</bm> suyo es que ningún ejército puede detener la fuerza de una idea cuando llega a tiempo. </p>
               </div>
             </div>
           </div>
