--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
                 <div class="row">
 
                     <div class="col-lg-6 video-box align-self-baseline position-relative">
-                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\pingüs1.jpg"
+                        <img src="assets\img\pingüs1.jpg"
                             class="img-fluid" alt="">
                         <a href="https://www.youtube.com/watch?v=YjHeDz_jVSU&list=LL&index=1&t=21s"
                             class="glightbox play-btn mb-4"></a>
@@ -204,7 +204,7 @@
 
                 <div class="row content">
                     <div class="col-md-5" data-aos="fade-right">
-                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\work-process-1.png"
+                        <img src="assets\img\work-process-1.png"
                             class="img-fluid" alt="">
                     </div>
                     <div class="col-md-7 pt-4" data-aos="fade-left">
@@ -233,7 +233,7 @@
 
                 <div class="row content">
                     <div class="col-md-5 order-1 order-md-2" data-aos="fade-left">
-                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\work-process-2.png"
+                        <img src="assets\img\work-process-2.png"
                             class="img-fluid" alt="">
                     </div>
                     <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
@@ -253,7 +253,7 @@
 
                 <div class="row content">
                     <div class="col-md-5" data-aos="fade-right">
-                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\work-process-3.png"
+                        <img src="assets\img\work-process-3.png"
                             class="img-fluid" alt="">
                     </div>
                     <div class="col-md-7 pt-5" data-aos="fade-left">
@@ -287,7 +287,7 @@
 
                 <div class="row content">
                     <div class="col-md-5 order-1 order-md-2" data-aos="fade-left">
-                        <img src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\work-process-4.png"
+                        <img src="assets\img\work-process-4.png"
                             class="img-fluid" alt="">
                     </div>
                     <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
@@ -327,35 +327,35 @@
                 <div class="clients-slider swiper-container">
                     <div class="swiper-wrapper align-items-center">
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\clients\client-1.png"
+                                src="assets\img\clients\client-1.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\clients\client-2.png"
+                                src="assets\img\clients\client-2.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\clients\client-3.png"
+                                src="assets\img\clients\client-3.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\clients\client-4.png"
+                                src="assets\img\clients\client-4.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\clients\client-5.png"
+                                src="assets\img\clients\client-5.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\clients\client-6.png"
+                                src="assets\img\clients\client-6.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\clients\client-7.png"
+                                src="assets\img\clients\client-7.png"
                                 class="img-fluid" alt="">
                         </div>
                         <div class="swiper-slide"><img
-                                src="C:\Users\Admin\Documents\GitHub\treballfidecurs\assets\img\clients\client-8.png"
+                                src="assets\img\clients\client-8.png"
                                 class="img-fluid" alt="">
                         </div>
                     </div>
