--- a/Merchandaisin (index)/index.html
+++ b/Merchandaisin (index)/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Sixteen Clothing HTML Template</title>
+    <title>SphenAuk - Merchandising</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -76,28 +76,13 @@ https://templatemo.com/tm-546-sixteen-clothing
       </div>
     </header>
     <!-- Page Content -->
-    <!-- Banner Starts Here -->
-    <div class="banner header-text">
-      <div class="owl-banner owl-carousel">
-        
-        <div class="banner-item-02">
-          <div class="text-content">
-            <h4>No te vayas sin un recuerdo</h4>
-            <h2>Contribuye con nuestra asociacion y llevate un recuerdo</h2>
-          </div>
-        </div>
-       
-      </div>
-    </div>
-    <!-- Banner Ends Here -->
 
     <div class="latest-products">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Merchardaising</h2>
-              <a href="products.html">view all products <i class="fa fa-angle-right"></i></a>
+              <h2>Merchandising</h2>
             </div>
           </div>
           <div class="col-md-4">
@@ -138,7 +123,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="product-item">
-              <a href="#"><img src="assets/imagenes/casia 2.jpg" alt=""></a>
+              <a href="#"><img src="assets/imagenes/casia 2 (1).jpg" alt=""></a>
               <div class="down-content">
                 <a href="#"><h4>Camiseta Estampado</h4></a>
                 <h6>$20.45</h6>
@@ -178,7 +163,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               <div class="down-content">
                 <a href="#"><h4>Peluche XXl</h4></a>
                 <h6>$22.50</h6>
-                <p>Peluche mas grande, 100% algodon confeccionado a mano. Ideal para las codiciosas.</p>
+                <p>Peluche mas grande, 100% algodon confeccionado a mano.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -196,7 +181,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               <div class="down-content">
                 <a href="#"><h4>Sudadera, pingu</h4></a>
                 <h6>$30.50</h6>
-                <p>Sudadera negra impermeable, es una sudaderacon con un pingüino que mas quieres jdr </p>
+                <p>Sudadera negra impermeable <br></br></p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -230,7 +215,6 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <li><a href="#">Construir refujios de para preservar la especie</a></li>
                 <li><a href="#">Evitar su caza furtiva </a></li>
                 <li><a href="#">Desarrollar nuevos metodos para protegerlos de sus depredadores</a></li>
-                <li><a href="#">Hacernos de oro </a></li>
               </ul>
               <a href="about.html" class="filled-button">Sobre nosotros</a>
             </div>
