--- a/pagos estadisticas (profile-dashboard)/dashboard.html
+++ b/pagos estadisticas (profile-dashboard)/dashboard.html
@@ -55,6 +55,13 @@
                     <ul id="sidebarnav">
                         <!-- User Profile-->
                         <li class="sidebar-item pt-2">
+                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="../index.html"
+                                aria-expanded="false">
+                                <i class="fas fa-home" aria-hidden="true"></i>
+                                <span class="hide-menu">Home</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-item pt-2">
                             <a class="sidebar-link waves-effect waves-dark sidebar-link" href="dashboard.html"
                                 aria-expanded="false">
                                 <i class="far fa-clock" aria-hidden="true"></i>
@@ -68,6 +75,7 @@
                                 <span class="hide-menu">Colabora</span>
                             </a>
                         </li>
+                        
                         
                     </ul>
 
