--- a/registre.html
+++ b/registre.html
@@ -42,34 +42,36 @@
 
 <!-- ======= Header ======= -->
 <header id="header" class="fixed-top d-flex align-items-center">
-  <div class="container d-flex align-items-center justify-content-between">
+    <div class="container d-flex align-items-center justify-content-between">
 
-    <div class="logo">
-      <!--<h1 class="text-light"><a href="index.html">SphenAuk</a></h1>-->
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+      <div class="logo">
+        <!--<h1 class="text-light"><a href="index.html">SphenAuk</a></h1>-->
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+      </div>
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li class="dropdown"><a href="#"><span>Sobre Nosotros</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="about.html">¿Que hacemos?</a></li>
+              <li><a href="team.html">¿Quienes trabajamos?</a></li>
+            </ul>
+          </li>
+          <li><a href="pricing.html">Adopta a un pingüino</a></li>
+          <li><a href="Merchandaisin (index)/index.html">Tienda</a></li>
+          <li><a href="./pagos estadisticas (profile-dashboard)/dashboard.html">Estadisticas</a></li>
+          <li><a href="blog.html">Noticias</a></li>
+          <li><a href="contact.html">Contacto</a></li>
+
+          <li><a class="getstarted" href="registre.html">Hazte socio</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+
     </div>
-
-    <nav id="navbar" class="navbar">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li class="dropdown"><a href="#"><span>Sobre Nosotros</span> <i class="bi bi-chevron-down"></i></a>
-          <ul>
-            <li><a href="about.html">¿Que hacemos?</a></li>
-            <li><a href="team.html">¿Quienes trabajamos?</a></li>
-          </ul>
-        </li>
-        <li><a href="pricing.html">Adopta a un pingüino</a></li>
-        <li><a href="Merchandaisin (index)/index.html">Tienda</a></li>
-        <li><a href="contact.html">Contacto</a></li>
-
-        <li><a class="getstarted" href="registre.html">Hazte socio</a></li>
-      </ul>
-      <i class="bi bi-list mobile-nav-toggle"></i>
-    </nav><!-- .navbar -->
-
-  </div>
-</header><!-- End Header -->
+  </header><!-- End Header -->
 
   <main id="main">
 
@@ -198,9 +200,7 @@
           </div>
       </div>
   </footer><!-- End Footer -->
-
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
+  
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
