--- a/Merchandaisin (index)/index.html
+++ b/Merchandaisin (index)/index.html
@@ -161,7 +161,7 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="product-item">
               <a href="#"><img src="assets/imagenes/peluche grande.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Peluche XXl</h4></a>
+                <a href="#"><h4>Peluche XXL</h4></a>
                 <h6>$22.50</h6>
                 <p>Peluche mas grande, 100% algodon confeccionado a mano.</p>
                 <ul class="stars">
@@ -179,7 +179,7 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div class="product-item">
               <a href="#"><img src="assets/imagenes/sudadera.jpg" alt=""></a>
               <div class="down-content">
-                <a href="#"><h4>Sudadera, pingu</h4></a>
+                <a href="#"><h4>Sudadera Pingu</h4></a>
                 <h6>$30.50</h6>
                 <p>Sudadera negra impermeable <br></br></p>
                 <ul class="stars">
