--- a/team.html
+++ b/team.html
@@ -105,7 +105,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src="./imagenes/chino felis.jpg" class="img-fluid" alt="" >
+                <img src="./imagenes/Fotitomia.png" class="img-fluid" alt="" >
                 <div class="social">
                   <a href="https://twitter.com/norcoreano?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -127,35 +127,36 @@
               <div class="member-img">
                 <img src="./imagenes/carlos posing.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href="https://twitter.com/BillGates"><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://twitter.com/Moewagon"><i class="bi bi-twitter"></i></a>
+                  <a href="https://www.facebook.com/CarlosSansanoPavon/"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/carlossansano/"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/carlossansano/"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
                 <h4>Carlos </h4>
                 <span>Futbolista Retirado</span>
-                <p> Carlos estava siendo la futura promesa de un equipo en Miami, hasta que lamentablemente sufrio un accidente que le impidio seguir jugando. Despues de esa gran adversidad encontro la paz y la satisfaccion colaborando con nosotros. Su <strong>IDEAL</strong> es que cuando la necesidad de éxito es tanta como la necesidad de respirar, entonces serás exitoso.  </p>
+                <p> Carlos estaba siendo la futura promesa de un equipo en Miami, hasta que lamentablemente sufrio un accidente que le impidio seguir jugando. Despues de esa gran adversidad encontro la paz y la satisfaccion colaborando con nosotros. Su <strong>IDEAL</strong> es que cuando la necesidad de éxito es tanta como la necesidad de respirar, entonces serás exitoso.  </p>
               </div>
             </div>
           </div>
 
+          
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
+            <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src="./imagenes/rogelio.jpg" class="img-fluid" alt="">
+                <img src="./imagenes/roger posing.jpg" class="img-fluid" alt="" height="350px">
                 <div class="social">
-                  <a href="https://twitter.com/KingJames"><i class="bi bi-twitter"></i></a>
+                  <a href="https://twitter.com/KimKardashian"><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>Rogelio</h4>
-                <span>Cocinero</span>
-                <p>Rogelio, era dueño de restaurante con gran renombre hasta que tuvo que cerrar su restaurante por una intoxicacion alimentaria. Al pasar esa situacion se dio cuenta de como era su entorno actual de verdad, esto le hizo valorar mas a lo animales y empezo su camino en intentar ayudarlos. Su <strong>IDEAL</strong> en este caso es que si haces lo que siempre has hecho, llegarás donde siempre has llegado.  </p>
+                <h4>Roger</h4>
+                <span>5cabeza</span>
+                <p></p>
               </div>
             </div>
           </div>
@@ -193,12 +194,29 @@
               <div class="member-info">
                 <h4>Chayanne</h4>
                 <span>Musico</span>
-                <p>Simplemente Chayanne. Gran parte de sus canciones han sido dedicada a los pingüinos</p>
+                <p>Simplemente Chayanne. Gran parte de sus canciones han sido dedicadas a los pingüinos</p>
               </div>
             </div>
           </div>
 
-         
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="200">
+              <div class="member-img">
+                <img src="./imagenes/rogelio.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href="https://twitter.com/KingJames"><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Rogelio</h4>
+                <span>Cocinero</span>
+                <p>Rogelio, era dueño de restaurante con gran renombre hasta que tuvo que cerrar su restaurante por una intoxicacion alimentaria. Al pasar esa situacion se dio cuenta de como era su entorno actual de verdad, esto le hizo valorar mas a lo animales y empezo su camino en intentar ayudarlos. Su <strong>IDEAL</strong> en este caso es que si haces lo que siempre has hecho, llegarás donde siempre has llegado.  </p>
+              </div>
+            </div>
+          </div>
 
         </div>
 
