--- a/Merchandaisin (index)/index.html
+++ b/Merchandaisin (index)/index.html
@@ -20,7 +20,7 @@ TemplateMo 546 Sixteen Clothing
 https://templatemo.com/tm-546-sixteen-clothing
 
 -->
-
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/css/templatemo-sixteen.css">
@@ -60,7 +60,7 @@ https://templatemo.com/tm-546-sixteen-clothing
             </ul>
           </li>
           <li><a href="../pricing.html">Adopta a un pingüino</a></li>
-          <li><a href="Merchandaisin (index)/index.html">Tienda</a></li>
+          <li><a class="active" href="#">Tienda</a></li>
           <li><a href="../pagos estadisticas (profile-dashboard)/dashboard.html">Estadisticas</a></li>
           <li><a href="../blog.html">Noticias</a></li>
           <li><a href="../contact.html">Contacto</a></li>
@@ -216,7 +216,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <li><a href="#">Evitar su caza furtiva </a></li>
                 <li><a href="#">Desarrollar nuevos metodos para protegerlos de sus depredadores</a></li>
               </ul>
-              <a href="about.html" class="filled-button">Sobre nosotros</a>
+              <a href="../about.html" class="btn btn-lg btn-primary">Sobre nosotros</a>
             </div>
           </div>
           <div class="col-md-6">
@@ -240,7 +240,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <p>Lo nuestro es una <em>ONG</em> es importante saber que no no queremos lucrar ni mucho menos a base esto. Puedes aportar algo aqui</p>
                 </div>
                 <div class="col-md-4">
-                  <a href="#" class="filled-button">DONAR</a>
+                  <a href="../pagos estadisticas (profile-dashboard)/profile.html" class="btn btn-lg btn-primary">DONAR</a>
                 </div>
               </div>
             </div>
