--- a/Merchandaisin (index)/index.html
+++ b/Merchandaisin (index)/index.html
@@ -216,7 +216,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <li><a href="#">Evitar su caza furtiva </a></li>
                 <li><a href="#">Desarrollar nuevos metodos para protegerlos de sus depredadores</a></li>
               </ul>
-              <a href="../about.html" class="btn btn-lg btn-primary">Sobre nosotros</a>
+              <div class="btndon"><a href="../about.html" style="font-size: 14px;"" class="btn btn-lg btn-primary">Sobre nosotros</a></div>
             </div>
           </div>
           <div class="col-md-6">
@@ -240,7 +240,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   <p>Lo nuestro es una <em>ONG</em> es importante saber que no no queremos lucrar ni mucho menos a base esto. Puedes aportar algo aqui</p>
                 </div>
                 <div class="col-md-4">
-                  <a href="../pagos estadisticas (profile-dashboard)/profile.html" class="btn btn-lg btn-primary">DONAR</a>
+                  <div class="btndon"><a href="../pagos estadisticas (profile-dashboard)/profile.html" style="font-size: 14px;" class="btn btn-lg btn-primary">Donar</a></div> 
                 </div>
               </div>
             </div>
