--- a/team.html
+++ b/team.html
@@ -155,8 +155,8 @@
               </div>
               <div class="member-info">
                 <h4>Roger</h4>
-                <span>5cabeza</span>
-                <p></p>
+                <span>Lorem</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita repellat, eum consectetur ut incidunt eius error. Deserunt dolores tempore molestias quae placeat enim, beatae voluptatem totam dolorem officia error temporibus.</p>
               </div>
             </div>
           </div>
