--- a/Merchandaisin (index)/index.html
+++ b/Merchandaisin (index)/index.html
@@ -91,7 +91,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               <div class="down-content">
                 <a href="#"><h4>Llavero portatil</h4></a>
                 <h6>$7.75</h6>
-                <p>Llavero esponjoso confeccionado a base de tela y algodon caucasico.                   </p>
+                <p>Llavero esponjoso confeccionado a base de tela y algodon caucasico.</p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
@@ -109,7 +109,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               <div class="down-content">
                 <a href="#"><h4>Camisa Smoking </h4></a>
                 <h6>$30.25</h6>
-                <p>Camiseta tipo esmoquin. muy elegante e ideal para bodas eventos que requieran de mucha importancia </p>
+                <p>Camiseta tipo esmoquin. Ideal para eventos que requieran de mucha importancia </p>
                 <ul class="stars">
                   <li><i class="fa fa-star"></i></li>
                   <li><i class="fa fa-star"></i></li>
