--- a/team.html
+++ b/team.html
@@ -107,17 +107,17 @@
               <div class="member-img">
                 <img src="./imagenes/Fotitomia.png" class="img-fluid" alt="" >
                 <div class="social">
-                  <a href="https://twitter.com/norcoreano?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="https://twitter.com/Juanma1817"><i class="bi bi-twitter"></i></a>
+                  <a href="https://www.facebook.com/JuanMa2001/"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/juanma_1801/"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/juan-manuel-hernandez-giannini-5b787620a/"><i class="bi bi-linkedin"></i></a>
                 </div>
         
               </div>
               <div class="member-info">
                 <h4>Juan Manuel</h4>
-                <span>Mecanico</span>
-                <p>Estuvo trabajando como mecanico 7 años hasta que se dio cuenta de que eso no lo llenaba como persona asi que decidio emprender un el camino de la beneficiencia. Un <strong>IDEAL</strong> suyo es que ningún ejército puede detener la fuerza de una idea cuando llega a tiempo.</p>
+                <span>Impulsor</span>
+                <p>Estuvo trabajando en muchos trabajos diferentes durante un par de años hasta que se dio cuenta de que eso no lo llenaba como persona asi que decidio emprender el camino de la beneficiencia. Un <strong>IDEAL</strong> suyo es que nada es imposible si le pones agallass.</p>
               </div>
             </div>
           </div>
