--- a/team.html
+++ b/team.html
@@ -117,7 +117,7 @@
               <div class="member-info">
                 <h4>Juan Manuel</h4>
                 <span>Impulsor</span>
-                <p>Estuvo trabajando en muchos trabajos diferentes durante un par de años hasta que se dio cuenta de que eso no lo llenaba como persona asi que decidio emprender el camino de la beneficiencia. Un <strong>IDEAL</strong> suyo es que nada es imposible si le pones agallass.</p>
+                <p>Estuvo trabajando en muchos trabajos diferentes durante un par de años hasta que se dio cuenta de que eso no lo llenaba como persona asi que decidio emprender el camino de la beneficiencia. Un <strong>IDEAL</strong> suyo es que nada es imposible si le pones agallas.</p>
               </div>
             </div>
           </div>
