--- a/team.html
+++ b/team.html
@@ -155,8 +155,8 @@
               </div>
               <div class="member-info">
                 <h4>Roger</h4>
-                <span>Lorem</span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita repellat, eum consectetur ut incidunt eius error. Deserunt dolores tempore molestias quae placeat enim, beatae voluptatem totam dolorem officia error temporibus.</p>
+                <span>Mayorista</span>
+                <p>No limpio pescado. Una esponja de mar amarilla rectangular y sus amigos que vive bajo las aguas en una piña de dos pisos en una ciudad imaginaria llamada Fondo de Bikini.Su <strong>IDEAL</strong> es convertirse en una cangreburguer.</p>
               </div>
             </div>
           </div>
