--- a/Merchandaisin (index)/index.html
+++ b/Merchandaisin (index)/index.html
@@ -30,7 +30,7 @@ https://templatemo.com/tm-546-sixteen-clothing
 
   <body>
 
-    <!-- ***** Preloader Start ***** -->
+    <!-- ***** Preloader Start ***** 
     <div id="preloader">
         <div class="jumper">
             <div></div>
@@ -38,7 +38,7 @@ https://templatemo.com/tm-546-sixteen-clothing
             <div></div>
         </div>
     </div>  
-    <!-- ***** Preloader End ***** -->
+     ***** Preloader End ***** -->
 
       <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
