--- a/team.html
+++ b/team.html
@@ -174,8 +174,8 @@
               </div>
               <div class="member-info">
                 <h4>Joseph</h4>
-                <span>Network Marqueting</span>
-                <p> Trabajo dedidacandose intensamente al Network marqueting, hasta que un dia, se dio cuenta de que lo que estaba haciendo era estafar de manera indirecta a personas sin demasiados conocimientos. Esto le removio la conciencia y quiso redimirse, esto lo hizo entrando a colaborar con esta ONG. Uno de sus <strong>IDEALES</strong> es que muchos de nosotros no estamos viviendo nuestros sueños porque tememos vivir nuestros miedos. </p>
+                <span>Trader</span>
+                <p> Trabajo dedidacandose intensamente al mundo del trader, hasta que un dia, se dio cuenta de que lo que estaba haciendo era estafar de manera indirecta a personas sin demasiados conocimientos. Esto le removio la conciencia y quiso redimirse, esto lo hizo entrando a colaborar con esta ONG. Uno de sus <strong>IDEALES</strong> es que muchos de nosotros no estamos viviendo nuestros sueños porque tememos vivir nuestros miedos. </p>
               </div>
             </div>
           </div>
@@ -194,7 +194,7 @@
               <div class="member-info">
                 <h4>Chayanne</h4>
                 <span>Musico</span>
-                <p>Simplemente Chayanne. Gran parte de sus canciones han sido dedicadas a los pingüinos</p>
+                <p>Es un antoautor Puertoriqueño. Gran parte de su inspiracion ha sido gracias a lo que le transmiten a pingüinos</p>
               </div>
             </div>
           </div>
